--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -129,7 +129,7 @@ $space-8: 6rem;     // 96px
    ========================================================================== */
 
 $content-max-width: 680px;
-$masthead-height: 0;
+$masthead-height: 60px;
 
 // Legacy breakpoints
 $small: 600px !default;
